--- a/src/blocks/main/author/author.css
+++ b/src/blocks/main/author/author.css
@@ -20,7 +20,7 @@
   flex-direction: column;
 }
 .author__title{
-  font-family: Roboto Slab;
+  font-family: 'Roboto Slab', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 40px;
@@ -29,7 +29,7 @@
 }
 .author__info{
   width: 100%;
-  font-family: Roboto;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
@@ -75,6 +75,7 @@
   width: 89%;
   margin: auto;
   padding-top: 32px;
+  padding-bottom: 80px;
   padding-left: 0;
   background: #FFFFFF;
   display: flex;
