--- a/src/blocks/main/popup-forms/button/button.css
+++ b/src/blocks/main/popup-forms/button/button.css
@@ -4,7 +4,7 @@
   height: 64px;
   border-radius: 100px;
   background: #E6E8EB;
-  font-family: Roboto;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
