--- a/src/blocks/main/after_results/finding/finding.css
+++ b/src/blocks/main/after_results/finding/finding.css
@@ -1,5 +1,5 @@
 .finding{
-  margin: 80px auto;
+  margin: 0px auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,7 +19,7 @@
 }
 }
 .finding__subtitle{
-  font-family: Roboto;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
