--- a/src/blocks/main/after_results/show-more/show-more.css
+++ b/src/blocks/main/after_results/show-more/show-more.css
@@ -3,10 +3,10 @@
   display: flex;
   margin: auto;
   height: 64px;
-  margin-top: 80px;
+  margin-top: 56px;
   background: #FFFFFF;
   border-radius: 80px;
-  font-family: Roboto;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -35,7 +35,7 @@
   height: 64px;
   background: #FFFFFF;
   border-radius: 80px;
-  font-family: Roboto;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
