--- a/src/blocks/main/footer/footer.css
+++ b/src/blocks/main/footer/footer.css
@@ -9,7 +9,7 @@
 
 }
 .footer__copyright{
-  font-family: Roboto;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -18,7 +18,7 @@
   margin: 0;
 }
 .footer__info{
-  font-family: Roboto;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
@@ -27,11 +27,17 @@
   justify-content: space-between;
 }
 .footer__info-main{
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: normal;
   margin: 0;
   text-decoration: none;
   color: #1A1B22;
 }
 .footer__info-yapracticum{
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: normal;
   margin-left: 30px;
   width: 70%;
   text-decoration: none;
@@ -84,15 +90,16 @@ margin-left: 10px;
   position: relative;
   width: 89%;
   margin: auto;
-  padding:100px 0 0px;
+  padding: 20px 0 20px;
 
 }
 .footer__copyright{
   position: absolute;
-  left: 5px;
-  bottom: -38px;
-  font-size: 16px;
-  line-height: 22px;
+  left: 15px;
+  bottom: -28px;
+  font-size: 12px;
+  line-height: 14px;
+  padding-bottom: 20px;
   margin: 0;
 }
 .footer__info{
