--- a/src/blocks/main/popup-forms/form_enter/form_enter.css
+++ b/src/blocks/main/popup-forms/form_enter/form_enter.css
@@ -1,5 +1,5 @@
 .or-registration{
-  font-family: Inter;
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: normal;
   margin: auto;
@@ -12,7 +12,7 @@
 .or-registration__link{
   border: none;
   padding: 0;
-  font-family: Inter;
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
