--- a/src/blocks/main/popup-forms/registration-ok/registration-ok.css
+++ b/src/blocks/main/popup-forms/registration-ok/registration-ok.css
@@ -4,7 +4,7 @@
   }
   .registration-ok__subtitle{
   padding-top: 14px ;
-    font-family: Inter;
+    font-family: 'Inter', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
@@ -12,6 +12,10 @@
 
   color: #2F71E5;
   }
+  .registration-ok__subtitle:focus{
+
+    color: #347EFF;
+    }
 .registration-ok.form-is-opened{
   display: flex;
 }
