--- a/src/blocks/main/results/results.css
+++ b/src/blocks/main/results/results.css
@@ -8,7 +8,7 @@
   width: 85%;
   margin: auto;
   margin-bottom: 64px;
-  font-family: Roboto Slab;
+  font-family: 'Roboto Slab', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 40px;
