--- a/src/blocks/main/search/header/header.css
+++ b/src/blocks/main/search/header/header.css
@@ -13,7 +13,7 @@
   padding-bottom: 0;
   padding-top: 30px;
   margin: 0;
-  font-family: Roboto Slab;
+  font-family: 'Roboto Slab', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: bold;
   width: 200px;
@@ -31,7 +31,7 @@
 .header__main{
   font-size: 18px;
   line-height: 24px;
-  font-family: Roboto;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 500;
   text-decoration: none;
@@ -43,6 +43,9 @@
   border-bottom: 3px solid white;
 }
 .header__saved-articles{
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 500;
   font-size: 18px;
   line-height: 24px;
   text-decoration: none;
@@ -60,6 +63,9 @@
   color: #FFFFFF;
 }
 .header__auth{
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  font-style: normal;
+  font-weight: 500;
   text-decoration: none;
   color: #FFFFFF;
   margin: 0;
@@ -80,7 +86,7 @@
 }
 .header__name-menu{
   font-size: 18px;
-  font-family: Roboto;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 500;
   padding-left: 10px;
@@ -93,7 +99,7 @@
 }
 .header__name{
   font-size: 18px;
-  font-family: Roboto Slab;
+  font-family: 'Roboto Slab', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: normal;
   text-decoration: none;
