--- a/src/blocks/main/search/header/mobile__header.css
+++ b/src/blocks/main/search/header/mobile__header.css
@@ -22,7 +22,7 @@
 }
 
 .header__tittle_mobile{
-  font-family: Roboto Slab;
+  font-family: 'Roboto Slab', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
@@ -39,7 +39,7 @@
   margin: auto;
   display: flex;
   flex-direction: column;
-  font-family: Roboto;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -49,7 +49,7 @@
 }
 .header__main_mobile{
   width: 89%;
-  font-family: Roboto;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -60,7 +60,7 @@
 }
 .header__auth_mobile{
   width: 89%;
-  font-family: Roboto;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -74,7 +74,7 @@
 }
 .header__saved-articles_mobile{
   width: 100%;
-  font-family: Roboto;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
@@ -88,7 +88,7 @@
   margin: auto;
   justify-content: center;
   align-items: flex-start;
-  font-family: Roboto;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
