--- a/src/blocks/saved/results/article/article.css
+++ b/src/blocks/saved/results/article/article.css
@@ -4,7 +4,7 @@
   top: 10px;
   background: #FFFFFF;
   border-radius: 10px;
-  font-family: Roboto;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
@@ -19,7 +19,7 @@
   top: 10px;
   background: #FFFFFF;
   border-radius: 10px;
-  font-family: Roboto;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
