--- a/src/blocks/saved/search/search-menu/search-menu.css
+++ b/src/blocks/saved/search/search-menu/search-menu.css
@@ -7,7 +7,7 @@
 .search-menu__uppersubtitle-saved{
   margin-top: -24px;
   margin-bottom: -16px;
-  font-family: Roboto;
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
@@ -42,6 +42,15 @@
   line-height: 24px;
 }
 .search-menu__subtittle_saved{
+  font-size: 12px;
+line-height: 24px;
   padding-bottom: 0px;
+}
+.search-menu__uppersubtitle-saved{
+  margin-top: -24px;
+  margin-bottom: -16px;
+  font-size: 12px;
+  line-height: 24px;
+  color: rgba(26, 27, 34, 0.5);
 }
 }
